k8s/07-reverse-proxy/reverse-proxy_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reverse-proxy
  namespace: my-project
  labels:
    app: reverse-proxy
spec:
  selector:
    app: reverse-proxy
  ports:
    - port: 80
      targetPort: 8080
      name: http
  type: ClusterIP
