k8s/07-reverse-proxy/nginx-proxy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  namespace: my-project
  annotations:

    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: my-project-cors-headers@kubernetescrd # ns-name@provider

spec:
  ingressClassName: traefik

  tls:
    - hosts:
        - api.sfx-markt.de   # your domain
      secretName: api-tls  # cert-manager will create & manage this secret in 'my-project'

  rules:
    - host: api.sfx-markt.de
      http:
        paths:
          # ---------------------------
          # Baskets
          # ---------------------------
          - path: /api/baskets
            pathType: Prefix
            backend:
              service:
                name: baskets
                port:
                  number: 80

          # ---------------------------
          # Ordering
          # ---------------------------
          - path: /api/ordering
            pathType: Prefix
            backend:
              service:
                name: ordering
                port:
                  number: 80

          # ---------------------------
          # Payments
          # ---------------------------
          - path: /api/payments
            pathType: Prefix
            backend:
              service:
                name: payments
                port:
                  number: 80

          # ---------------------------
          # Shipping
          # ---------------------------
          - path: /api/shipping
            pathType: Prefix
            backend:
              service:
                name: shipping
                port:
                  number: 80

          # ---------------------------
          # Search
          # ---------------------------
          - path: /api/search
            pathType: Prefix
            backend:
              service:
                name: search
                port:
                  number: 80

          - path: /api/metrics
            pathType: Prefix
            backend:
              service:
                name: metrics
                port:
                  number: 80

          # ---------------------------
          # Users
          # ---------------------------
          - path: /api/users
            pathType: Prefix
            backend:
              service:
                name: users
                port:
                  number: 80

          # ---------------------------
          # Products
          # ---------------------------
          - path: /api/products
            pathType: Prefix
            backend:
              service:
                name: products
                port:
                  number: 80

          - path: /api/reviews
            pathType: Prefix
            backend:
              service:
                name: reviews
                port:
                  number: 80

          - path: /api/following
            pathType: Prefix
            backend:
              service:
                name: following
                port:
                  number: 80

          # ---------------------------
          # Posts
          # ---------------------------
          - path: /api/posts
            pathType: Prefix
            backend:
              service:
                name: posts
                port:
                  number: 80


          # ---------------------------
          # Services
          # ---------------------------
          - path: /api/services
            pathType: Prefix
            backend:
              service:
                name: services
                port:
                  number: 80

          # ---------------------------
          # Notifications
          # ---------------------------
          - path: /api/notifications
            pathType: Prefix
            backend:
              service:
                name: notifications
                port:
                  number: 80

          # ---------------------------
          # Activity
          # ---------------------------
          - path: /api/activity
            pathType: Prefix
            backend:
              service:
                name: activity
                port:
                  number: 80

          # ---------------------------
          # Support
          # ---------------------------
          - path: /api/support
            pathType: Prefix
            backend:
              service:
                name: support
                port:
                  number: 80

          # ---------------------------
          # Offers
          # ---------------------------
          - path: /api/offers
            pathType: Prefix
            backend:
              service:
                name: offers
                port:
                  number: 80

          # ---------------------------
          # Wishlists
          # ---------------------------
          - path: /api/wishlists
            pathType: Prefix
            backend:
              service:
                name: wishlists
                port:
                  number: 80

          # ---------------------------
          # Newsletters
          # ---------------------------
          - path: /api/newsletters
            pathType: Prefix
            backend:
              service:
                name: newsletters
                port:
                  number: 80

          # ---------------------------
          # Comments
          # ---------------------------
          - path: /api/comments
            pathType: Prefix
            backend:
              service:
                name: comments
                port:
                  number: 80

          # ---------------------------
          # Messages
          # ---------------------------
          - path: /api/messages
            pathType: Prefix
            backend:
              service:
                name: messages
                port:
                  number: 80

          # ---------------------------
          # Media
          # ---------------------------
          - path: /api/media
            pathType: Prefix
            backend:
              service:
                name: media
                port:
                  number: 80

          # ---------------------------
          # Categories
          # ---------------------------
          - path: /api/categories
            pathType: Prefix
            backend:
              service:
                name: categories
                port:
                  number: 80

          # ---------------------------
          # Mailer
          # ---------------------------
          - path: /api/mailer
            pathType: Prefix
            backend:
              service:
                name: mailer
                port:
                  number: 80

          # ---------------------------
          # Geocoding
          # ---------------------------
          - path: /api/geocoding
            pathType: Prefix
            backend:
              service:
                name: geocoding
                port:
                  number: 80

          - path: /api/vectors
            pathType: Prefix
            backend:
              service:
                name: vectors
                port:
                  number: 80
          - path: /api/services
            pathType: Prefix
            backend:
              service:
                name: services
                port:
                  number: 80

          # ---------------------------
          # Assistants
          # ---------------------------
          - path: /api/assistants
            pathType: Prefix
            backend:
              service:
                name: assistants
                port:
                  number: 80
          - path: /api/erp
            pathType: Prefix
            backend:
              service:
                name: erp
                port:
                  number: 80
          - path: /api/merchant
            pathType: Prefix
            backend:
              service:
                name: erp
                port:
                  number: 80
          - path: /api/scheduler
            pathType: Prefix
            backend:
              service:
                name: erp
                port:
                  number: 80
          - path: /api/managers
            pathType: Prefix
            backend:
              service:
                name: erp
                port:
                  number: 80
